Fixed background on mobile Kinda hacky, but it's all I can do

--- a/static/Styles/hacker.css
+++ b/static/Styles/hacker.css
@@ -34,19 +34,34 @@
 	}
 }
 
-html{
+
+html {
 	scrollbar-color: var(--scrollbar-foreground) var(--scrollbar-background);
+	background: var(--scrollbar-background);
+
+}
+
+body::before {		/* Janky Hack because background-attachment: fixed doesn't work properly on mobile */
+	content: '';
 	background: var(--background-gradient);
-	background-repeat: no-repeat;
-	background-attachment: fixed;
-	height: 100%;
+	position: fixed;
+	width: 100vw;
+	height: 110vh;
+	z-index: -1;
+
+	display: block;
+	top: -5px;
+	left: 0px;
+	bottom: 0px;
+	right: 0px;
+
+	background-size: cover;
+	background-position: center top;
 }
 
 body {
 	margin: 0;
 	overflow-x: hidden;		/* TODO: DO I need this? */
-
-	/* Chrome hack */
 }
 
 /* General */
